sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: value getValeur is not a member of Boolean
    while (i-n > 0 getValeur(i-n)>memoire){
                   ^